--- a/MADE/ALGORITHMS/.vscode/settings.json
+++ b/MADE/ALGORITHMS/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
-    "python.linting.mypyEnabled": false
+    "python.linting.mypyEnabled": false,
+    "python.pythonPath": "/Users/mvvm/opt/anaconda3/bin/python"
 }
